--- a/Escape_Room.uproject
+++ b/Escape_Room.uproject
@@ -7,10 +7,7 @@
 		{
 			"Name": "Escape_Room",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"AdditionalDependencies": [
-				"Engine"
-			]
+			"LoadingPhase": "Default"
 		}
 	]
 }
