--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/BuildingEscape.BuildingEscape
-EditorStartupMap=/Game/BuildingEscape.BuildingEscape
+GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
+
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
